manifest/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  name: hoomee.nhatth.com
spec:
  ingressClassName: haproxy
  rules:
  - host: hoomee.nhatth.com
    http:
      paths:
      - backend:
          service:
            name: myapp-svc
            port:
              number: 3000
        path: /
        pathType: Prefix
